--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
 #game {
+    
     height: 100%;
     width: 100%;
+    overflow-y: hidden;
 }
 body{
+    overflow-y: hidden;
     margin: 0;
     height:100vh;
     width: 100vw;
